# napi-rs

./: Cargo.toml  index.d.ts  index.js  index.spec.mjs  main.mjs  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
