[package]
edition = "2021"
name = "flyingfly_napi-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.2.4", default-features = false, features = [
    "tokio_fs",
    "tokio_rt",
] } # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi-derive = "3.1.2"
futures = "0.3"

[build-dependencies]
napi-build = "2.2.3"

[profile.release]
lto = true
strip = "symbols"
