[package]
edition = "2021"
name = "flyingfly_napi-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.4.0", default-features = false, features = [
    "tokio_fs",
    "tokio_rt",
] }
napi-derive = "3.3.0"
futures = "0.3"

[build-dependencies]
napi-build = "2.2.4"

[profile.release]
lto = true
strip = "symbols"
